docs/api/qiskit/0.29/qiskit.chemistry.components.variational_forms.CHC.mdx
---
title: CHC (v0.29)
description: API reference for qiskit.chemistry.components.variational_forms.CHC in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.components.variational_forms.CHC
---

# CHC

<Class id="qiskit.chemistry.components.variational_forms.CHC" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/components/variational_forms/chc.py" signature="CHC(num_qubits=None, reps=1, ladder=False, excitations=None, entanglement='full', initial_state=None)" modifiers="class">
  Bases: `qiskit.aqua.components.variational_forms.variational_form.VariationalForm`

  This trial wavefunction is the Compact Heuristic for Chemistry.

  The trial wavefunction is as defined in Ollitrault Pauline J., Chemical science 11 (2020): 6842-6855. It aims at approximating the UCC Ansatz for a lower CNOT count.

  <Admonition title="Note" type="note">
    It is not particle number conserving and the accuracy of the approximation decreases with the number of excitations.
  </Admonition>

  **Parameters**

  *   **num\_qubits** (`Optional`\[`int`]) – number of qubits
  *   **reps** (`int`) – number of replica of basic module
  *   **ladder** (`bool`) – use ladder of CNOTs between to indices in the entangling block
  *   **excitations** (`Optional`\[`List`\[`List`\[`int`]]]) – indices corresponding to the excitations to include in the circuit
  *   **entanglement** (`Union`\[`str`, `List`\[`int`]]) – physical connections between the qubits
  *   **initial\_state** (`Union`\[`QuantumCircuit`, `InitialState`, `None`]) – an initial state to prepend to the variational form

  ## Methods

  <span id="qiskit-chemistry-components-variational-forms-chc-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.chemistry.components.variational_forms.CHC.construct_circuit" signature="CHC.construct_circuit(parameters, q=None)">
    Construct the variational form, given its parameters.

    **Parameters**

    *   **parameters** (`Union`\[`ndarray`, `List`\[`Parameter`], `ParameterVector`]) – circuit parameters
    *   **q** (`Optional`\[`QuantumRegister`]) – Quantum Register for the circuit.

    **Returns**

    a quantum circuit with given parameters

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

    **Raises**

    *   **ValueError** – the number of parameters is incorrect.
    *   **ValueError** – if num\_qubits has not been set and is still None
    *   **ValueError** – only supports single and double excitations at the moment.
  </Function>

  <span id="qiskit-chemistry-components-variational-forms-chc-get-entangler-map" />

  ### get\_entangler\_map

  <Function id="qiskit.chemistry.components.variational_forms.CHC.get_entangler_map" signature="CHC.get_entangler_map(map_type, num_qubits, offset=0)" modifiers="static">
    returns entangler map
  </Function>

  <span id="qiskit-chemistry-components-variational-forms-chc-validate-entangler-map" />

  ### validate\_entangler\_map

  <Function id="qiskit.chemistry.components.variational_forms.CHC.validate_entangler_map" signature="CHC.validate_entangler_map(entangler_map, num_qubits)" modifiers="static">
    validate entangler map
  </Function>

  ## Attributes

  ### num\_parameters

  <Attribute id="qiskit.chemistry.components.variational_forms.CHC.num_parameters">
    Number of parameters of the variational form.

    **Returns**

    An integer indicating the number of parameters.

    **Return type**

    int
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.chemistry.components.variational_forms.CHC.num_qubits">
    Number of qubits of the variational form.

    **Returns**

    An integer indicating the number of qubits.

    **Return type**

    int
  </Attribute>

  ### parameter\_bounds

  <Attribute id="qiskit.chemistry.components.variational_forms.CHC.parameter_bounds">
    Parameter bounds.

    **Returns**

    A list of pairs indicating the bounds, as (lower, upper). None indicates an unbounded parameter in the corresponding direction. If None is returned, problem is fully unbounded.

    **Return type**

    list
  </Attribute>

  ### preferred\_init\_points

  <Attribute id="qiskit.chemistry.components.variational_forms.CHC.preferred_init_points">
    Return preferred init points.

    If an initial state is provided then the variational form may provide back this set of parameters which when used on the variational form should result in the overall state being that defined by the initial state
  </Attribute>

  ### setting

  <Attribute id="qiskit.chemistry.components.variational_forms.CHC.setting" />

  ### support\_parameterized\_circuit

  <Attribute id="qiskit.chemistry.components.variational_forms.CHC.support_parameterized_circuit">
    Whether or not the sub-class support parameterized circuit.

    **Returns**

    indicate the sub-class support parameterized circuit

    **Return type**

    boolean
  </Attribute>
</Class>

